[gd_scene load_steps=6 format=3 uid="uid://2krmhcdinrk0"]

[ext_resource type="Script" uid="uid://0qx2fn4lf6em" path="res://scenes/Menu/Regras/regras.gd" id="1_qvsup"]
[ext_resource type="Theme" uid="uid://diciublvqerpy" path="res://fonte/tema_botao_regras.tres" id="4_nc7kh"]
[ext_resource type="AudioStream" uid="uid://dtyrdnnd64uql" path="res://audio/sfx/Tabuleiro/vidroquebrando.wav" id="5_mhwx7"]
[ext_resource type="AudioStream" uid="uid://xppry7fxumo6" path="res://audio/sfx/Tabuleiro/vidroquebrando2.mp3" id="6_6pfaa"]
[ext_resource type="AudioStream" uid="uid://clmfp6oa1opsf" path="res://audio/sfx/Tabuleiro/vidroquebrando3.mp3" id="7_wawmh"]

[node name="Regras" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qvsup")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0.74902)

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 110.0
offset_top = 130.0
offset_right = -110.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RichTextLabel" type="RichTextLabel" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/bold_italics_font_size = 40
theme_override_font_sizes/italics_font_size = 40
theme_override_font_sizes/mono_font_size = 40
theme_override_font_sizes/normal_font_size = 40
theme_override_font_sizes/bold_font_size = 40
bbcode_enabled = true
text = "[center][b][font size=50]Regras de FRACTURE[/font][/b][/center]


Aqui você encontrará uma forma rápida para tirar dúvida e revisar regras. Para aprender como jogar visite o tutorial.

[b] O baralho [/b]

[img]res://assets/ImageRules/TotalDeck.png[/img]

O baralho é compartilhado entre os jogadores e é composto por 40 cartas únicas, sendo 10 de cada cor. No começo da partida você receberá 5 dessas cartas de forma aleatória.



[b] Os slots [/b]

[img]res://assets/ImageRules/Slots.png[/img]

Cada carta só pode ser jogada no slot da mesma cor, exceto o slot quartzo, que é coringa e aceita qualquer carta. Cada jogador tem cinco slots próprios.



[b] Como ganhar [/b]

[img]res://assets/ImageRules/HowToWin.png[/img]

Vença conquistando 3 ou mais slots. Os hexágonos mostram a diferença de pontos. Se houver empate nos slots, ganha quem tiver mais pontos no total.



[b] Tipos de cartas [/b]

[img]res://assets/ImageRules/CardTypes.png[/img]

Além das cores as cartas possuem tipos. Elas podem ser Altas, Médias, Baixas ou Áses, dependendo do seu valor. Esses tipos irão influciar no custo para jogar e nas combinações possíveis entre elas, como veremos a seguir



[b] Combinações [/b]

[img]res://assets/ImageRules/Combinations.png[/img]

As cartas devem seguir uma das combinações válidas abaixo, podendo serem jogadas em qualquer ordem. Os Áses são cartas independentes, ou seja, podem ser jogadas independente da combinação.



[b] Mana [/b]

[img]res://assets/ImageRules/ManaExplain.png[/img]

O jogo  possui um sistema de Mana, para controlar a quantidade de ações por turno. Elas são divididas em manas pequenas e grandes sendo representadas por diferentes cristais, como visto acima. Cada turno você terá uma mana grande e duas manas pequena para planejar suas ações.



[b] Custos de Mana [/b]

[img]res://assets/ImageRules/CostMana.png[/img]



[b] Deck de Discarte [/b]

[img]res://assets/ImageRules/DiscardDeck.png[/img]

Aqui você pode descartar cartas que não encaixam com o seu jogo, você pode fazer isso uma vez por turno. O Descarte fica na esquerda inferior do tabuleiro



[b] Temporizador [/b] 

[img]res://assets/ImageRules/Timer.png[/img]

Esse é o temporizador, ele fica na parte central a direita do tabuleiro. Ele mostra o tempo restante do turno atual e se é sua vez de jogar ou não (se estiver apagado ou acesso). Caso deseje passar o turno clique nele. Se fizer isso sem gastar nenhuma mana irá fazer uma compra adicional. 



[b] Forjar 2 [/b]

[img]res://assets/ImageRules/Forge2Example.png[/img]

Você ainda pode melhorar suas cartas a partir de uma ação especial, o forjar 2. Ela se resume em juntar uma carta de valor 2 com um outro 2,  5 ou 8. Como resultado será gerada uma carta com valor somado e de cor igual a cor da maior carta, Em caso de juntar 2 com outro 2 a cor será determinada pela primeira carta escolhida. 


[b] Fim de jogo [/b]

Ambos os jogadores compram uma carta no começo de cada turno, até que o baralho acabe. Assim que acabar, o jogador que comprou fará o penúltimo turno, deixando que o outro jogador finalize a partida.








"
horizontal_alignment = 1

[node name="sair_button" type="Button" parent="."]
custom_minimum_size = Vector2(150, 80)
layout_mode = 0
offset_left = 35.0
offset_top = 35.0
offset_right = 185.0
offset_bottom = 115.0
theme = ExtResource("4_nc7kh")
text = "Voltar"

[node name="botaosom" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mhwx7")
volume_db = -17.0
pitch_scale = 1.05

[node name="botaosom2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_6pfaa")
volume_db = -15.0
pitch_scale = 1.05

[node name="botaosom3" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wawmh")
volume_db = -17.0

[connection signal="pressed" from="sair_button" to="." method="_on_sair_button_pressed"]
